# streamer-widgets

./: .gitignore  CHAT_SETUP.md  CONFIG_README.md  DISTRIBUTION.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  build_exe.bat  build_exe.ps1  config.example.json  pyproject.toml  run_tray.py  streamer-widgets.spec
app/: __init__.py  __main__.py  auth.py  chat_manager.py  chat_models.py  config.py  main.py  paths.py  state.py  tray.py  webserver.py  win_tray.py
app/assets/web/: config.html  index.html
app/assets/web/widgets/chatdock/: app.js  index.html  style.css
app/assets/web/widgets/livechat/: app.js  index.html  style.css
app/assets/web/widgets/nowplaying/: app.js  index.html  style.css
app/assets/web/widgets/viewercount/: app.js  index.html  style.css
app/providers/: gsmtc.py  twitch_chat.py  youtube_chat.py
